Version 1.5.0
* Post 2.2 tagging
* Add KVN5B format: like Mark5B but different data bit patterns (Richard Dodson)
* Add 3, 5, 6, and 7 channel VDIF decoders
* Add functionality to repair Mark5B data streams (regrid frames, remove stray bytes, fill missing frames with fill pattern)
* Add Mark5B file summary program, m5bsum, akin to vsum (in vdifio)

Version 1.4.4
* Slightly faster and more relaxed frame finding for VLBA and Mark4 formats
* Numerous small improvements based on improved cppcheck exposed by Martin
Ettl
* Add genheaders() for Mark4 and Mark5B formats
* m5test: minor improvements
* c++11 compliance
* Much improved capabilities for reading from stdin
* m5bstate: recognize filled data and don't count
* Remove findvdif program.  new program vsum in the vdifio package is much
better.
* m5timeseries utility added
* 32 channel 2 bit VDIF support (Nicolas Pradel)
* Version for DiFX-2.2, May 31, 2013

Version 1.4.3
* Post 2.0.1 tagging
* Adopt more unix-standard return values in utility programs
* mk5spec: work on complex data (Chris Phillips)
* VDIF format determination by data peeking added
* Version for DiFX-2.1, May 4, 2012

Version 1.4.2
* Post 2.0.0 tagging
* Start adding state counting for use in power detection.  2-bit sampling supported only at this time.
* Add m5tsys
* Can now make RedHat RPM
* Fix some memory leaks identified by valgrind.
* Introduce new_mark5_stream_absorb.  like new_mark5_stream, but it cleanly and immediately deallocates space for the temporary mark5_stream_generic and mark5_format_generic structures
* Version for DiFX-2.0.1, June 10, 2011

Version 1.4.1
* revert to standard "c" types (long long, unsigned char, ...) over int64_t, uint8_t
* disable all K5 code until that is at least somewhat useful
* Some memory leak fixes from Alexander Neidhardt and Martin Ettl (from Wettzell)
* Add m5fold utility
* Add some 4 and 8 bit unpackers for VDIF format
* m5d and m5spec : behave better if -h is given